--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <div>Trending</div>
         <div>Categories</div>
       </div>  
+      <i class="show-icon-menu">
+        <img src="./assets/images/icon-menu.svg" alt="icon-menu">
+      </i>
   </nav>
   <section>
     <div class="item1"><img src="./assets/images/image-web-3-desktop.jpg" alt="web 3 desktop image" class="web3-img"></div>
@@ -110,5 +113,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
     Coded by <a href="https://github.com/OsgoodPaekid" target="_blank">Osgood Ackom Amissah</a>
   </div>
+
+  <script src="index.js"></script>
 </body>
 </html>
